# fleece

./: .gitignore  .windsurfrules  Advertiser Disclosure.md  CLAUDE.md  GEMINI.md  README.md  SKILL.md  app.yaml  cli.py  db.py  fleece poc.ipynb  fleece.py  image_service.py  install.sh  migrate.py  plan.md  pyproject.toml  requirements.txt  style.css  test_fleece.py
.claude/skills/: fleece-card.md  fleece-compare.md  fleece-credits.md  fleece-flights.md  fleece-hotels.md  fleece-mcc.md  fleece-news.md  fleece-partners.md  fleece-profile.md  fleece-rates.md  fleece-recommend.md  fleece-roi.md  fleece-wallet.md
.cursor/rules/: fleece.mdc
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: databricks-app-deploy.yml  publish-skills.yml  publish.yml
.streamlit/: config.toml
docs/: CNAME  DESIGN.md  SEO.md  commands.html  index.html  ios.html  privacy-policy.html  robots.txt  sitemap.xml
ios/: ExportOptions.plist  README.md  apple-foundation-models.md  appstore-metadata.md  chat-feature-discussion.md  decision-log.md  ios-features-backlog.md  ios-known-issues.md  project.yml  release.sh
ios/FleeceApp/: AppState.swift  Config.swift  ContentView.swift  FleeceApp.swift  Info.plist
ios/FleeceApp.xcodeproj/: project.pbxproj
ios/FleeceWidget/: FleeceWidget.entitlements  (+1 more)
kb/: index.md
pages/: credit_cards.py  my_credit_cards.py
prompts/: agent_system_prompt.py
tests/: test_brave_client.py  test_cli.py  test_pointsyeah.py  test_renewal.py  test_tools.py
tools/: __init__.py  brave_client.py  credit_card_tools.py
(+35 files in other folders)
